[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/micha dans le lit.png" type="Texture" id=1]
[ext_resource path="res://Assets/quit.png" type="Texture" id=2]
[ext_resource path="res://Assets/titre.png" type="Texture" id=3]
[ext_resource path="res://Assets/start.png" type="Texture" id=4]
[ext_resource path="res://Script/StartButton.gd" type="Script" id=5]
[ext_resource path="res://Script/QuitButton.gd" type="Script" id=6]
[ext_resource path="res://Sounds/260881__trautwein__cat-purr.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Start.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="MichaDansLeLit" type="Sprite"]
position = Vector2( 409.875, 238.625 )
scale = Vector2( 0.668865, 0.666758 )
z_index = -1
texture = ExtResource( 1 )

[node name="Titre" type="Sprite" parent="."]
position = Vector2( 374.841, -232.082 )
scale = Vector2( 0.285862, 0.260668 )
texture = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
margin_left = 183.699
margin_top = 10.5891
margin_right = 995.699
margin_bottom = 616.589
rect_scale = Vector2( 0.361046, 0.311709 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 4 )
script = ExtResource( 5 )

[node name="StartButton2" type="Button" parent="."]
margin_left = 182.368
margin_top = 213.105
margin_right = 994.368
margin_bottom = 819.105
rect_scale = Vector2( 0.361046, 0.311709 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Start" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 182.368, 213.105 )
scale = Vector2( 0.361046, 0.311709 )
stream = ExtResource( 8 )
volume_db = 5.0

[node name="Pur" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 182.368, 213.105 )
scale = Vector2( 0.361046, 0.311709 )
stream = ExtResource( 7 )
volume_db = 10.0
autoplay = true

[connection signal="mouse_entered" from="StartButton" to="StartButton" method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="StartButton" method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="StartButton2" to="StartButton2" method="_on_StartButton2_mouse_entered"]
[connection signal="mouse_exited" from="StartButton2" to="StartButton2" method="_on_StartButton2_mouse_exited"]
[connection signal="pressed" from="StartButton2" to="StartButton2" method="_on_StartButton2_pressed"]
